Created the homepage

--- a/index.html
+++ b/index.html
@@ -28,9 +28,58 @@
   </head>
 <body>
   
-
-
-
+  <!-- Creating the header -->
+<header>
+    <nav id="navbar">
+      <ul class="nav-list">
+        <li class="nav-links"><a href="index.html">home</a></li>
+        <li class="nav-links"><a href="about.html">about</a></li>
+      </ul>
+      <h2 id="logo">Ebi Kpemi-Ogokimi</h2>
+      <ul class="nav-list">
+        <li class="nav-links"><a href="projects.html">projects</a></li>
+        <li class="nav-links"><a href="contact.html">contact</a></li>
+      </ul>
+      <button class="hamburger"type="button">
+        <div class="bar"></div>
+      </button>
+    </nav>
+  </header>
+ <nav class="mobile-nav">
+    <a href="index.html">home</a>
+    <a href="about.html">about</a>
+    <a href="projects.html">projects</a>
+    <a href="contact.html">contact</a>
+  </nav>
+  <section id="welcome-section">
+    <div id="greeting-area">
+      <h1>Hi!</h1>
+      <p class="name">I'm Ebi </p>
+      <p class="description">Software Developer</p>
+    </div>
+    <div id="greeting-img">
+      <div class="empty">
+        <img src="images/Ebi.jpeg" alt="photo of heather">
+      </div>
+    </div>
+  </section>
+  <!-- ABOUT ME -->
+<section class="about-section">
+    <div class="about">
+      <h2>About Me</h2>
+      <p>I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding<a href="about.html">continue...</a></p>
+    </div>
+   <!-- Footer -->
+   <div class="connect">
+      <p>Connect with Me</p>
+      <hr>
+    </div>
+    <div class="social-media">
+      <i><a href="https://github.com/Ebi27?tab=repositories" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
+      <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
+      <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
+    </div>
+  </footer>
      <!--JavaScript File Link-->
     <script type="text/javascript" src="src/index.js"></script>
 </body>
