--- a/about.html
+++ b/about.html
@@ -22,14 +22,94 @@
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
     ></script>
+     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="src/styles.css" />
     <title>About Me</title>
   </head>
 <body>
-    
+    <header>
+    <nav id="navbar">
+      <ul class="nav-list">
+        <li class="nav-links"><a href="index.html">home</a></li>
+        <li class="nav-links"><a href="about.html">about</a></li>
+      </ul>
+      <h2 id="logo">Ebi Kpemi-Ogokimi</h2>
+      <ul class="nav-list">
+        <li class="nav-links"><a href="projects.html">projects</a></li>
+        <li class="nav-links"><a href="contact.html">contact</a></li>
+      </ul>
+      <button class="hamburger"type="button">
+        <div class="bar"></div>
+      </button>
+    </nav>
+  </header>
+   <!-- Connecting the Navbar links -->
+ <nav class="mobile-nav">
+    <a href="index.html">home</a>
+    <a href="about.html">about</a>
+    <a href="projects.html">projects</a>
+    <a href="contact.html">contact</a>
+  </nav>
+  <section class="about-section">
+    <div class="about">
+      <h2>About Me</h2>
+      <p> I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding, I enjoy listening to music and just letting myself soak in the message the artist is passing, and traveling. I enjoy working independently as this gives me an opportunity to depend on my own knowledge and practice my abilities to research and trust my decisions. I however also enjoy collaborating within teams as well, as this helps me brainstorm ideas, gain some knowledge i would have otherwise spent so much time trying to find out and also share my own ideas. I like to have a balance of both, and this is what i look for in a company. </p>
+    </div>
 
-      <!--JavaScript File Link-->
+    <!-- Adding infos from my CV -->
+    <div class="resume">
+      <div class="resume-details section1">
+        <h3 class="resume-titles">Education</h3>
+        <ul>
+          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Jagiellonian University</b> MScInternational Security And Development</li>
+          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Afe Babalola University</b>BSc Intelligence And Security Studies</li>
+        </ul>
+      </div>
+      <div class="resume-details section2">
+        <h3 class="resume-titles">Skills</h3>
+        <ul>
+          <li class="resume-list"><ion-icon name="logo-html5"></ion-icon>HTML5</li>
+          <li class="resume-list"><ion-icon name="logo-css3"></ion-icon>CSS3</li>
+          <li class="resume-list"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
+          <li class="resume-list"><img src="https://img.icons8.com/ios-filled/50/000000/jquery.png"/>jQuery</li>
+          <li class="resume-list"><ion-icon name="git-branch-outline"></ion-icon>Git</li>
+        </ul>
+      </div>
+      <div class="resume-details section3">
+        <h3 class="resume-titles">Dev Tools</h3>
+        <ul>
+          <li class="resume-list"><ion-icon name="logo-github"></ion-icon>GitHub</li>
+          <li class="resume-list"><img src="images/VScode.png"/>VS Code</li>
+          <li class="resume-list"><ion-icon name="logo-google"></ion-icon>Google Fonts</li>
+          <li class="resume-list"><ion-icon name="logo-chrome"></ion-icon>Chrome Dev Tools</li>
+          <li class="resume-list"><img src="images/API.png">API</li>
+            <li class="resume-list"><img src="images/Hosting.png">Hosting</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Connecting my CV in PDF format -->
+     <section class="button-section">
+    <form method="get" action="Ebi.pdf" target="_blank">
+      <button class="resume-button" type="submit">Download Resume<span>(pdf)</span></button>
+    </form>
+  </section>
+  <!-- Links to my social media pages -->
+   <div class="connect">
+      <p>Connect with Me</p>
+      <hr>
+    </div>
+    <div class="social-media">
+      <i><a href="https://github.com/Ebi27?tab=repositories" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
+      <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
+      <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
+    </div>
+  </footer>
+  
+  <!--JavaScript File Link-->
     <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
