--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--Source Links -->
+    <!--Source Links bootstrp, font-awesome, ion-icon-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
@@ -45,12 +47,14 @@
       </button>
     </nav>
   </header>
+ <!-- Connecting the Navbar links -->
  <nav class="mobile-nav">
     <a href="index.html">home</a>
     <a href="about.html">about</a>
     <a href="projects.html">projects</a>
     <a href="contact.html">contact</a>
   </nav>
+  
   <section id="welcome-section">
     <div id="greeting-area">
       <h1>Hi!</h1>
@@ -69,7 +73,7 @@
       <h2>About Me</h2>
       <p>I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding<a href="about.html">continue...</a></p>
     </div>
-   <!-- Footer -->
+   <!-- Links to my social media pages -->
    <div class="connect">
       <p>Connect with Me</p>
       <hr>
