Added Body contents and a source link

--- a/thankyou.html
+++ b/thankyou.html
@@ -22,15 +22,62 @@
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
     ></script>
+     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="src/styles.css" />
     <title>Thank you</title>
   </head>
 <body>
-  
-    
-
-    
+  <header>
+    <nav id="navbar">
+      <ul class="nav-list">
+        <li class="nav-links"><a href="index.html">home</a></li>
+        <li class="nav-links"><a href="about.html">about</a></li>
+      </ul>
+      <h2 id="logo">Ebi Kpemi-Ogokimi</h2>
+      <ul class="nav-list">
+        <li class="nav-links"><a href="projects.html">projects</a></li>
+        <li class="nav-links"><a href="contact.html">contact</a></li>
+      </ul>
+      <button class="hamburger"type="button">
+        <div class="bar"></div>
+      </button>
+    </nav>
+  </header>
+     <!-- Connecting the Navbar links -->
+ <nav class="mobile-nav">
+    <a href="index.html">home</a>
+    <a href="about.html">about</a>
+    <a href="projects.html">projects</a>
+    <a href="contact.html">contact</a>
+  </nav>
+  <main id="thanks-container">
+    <h1 class="thank-you-title">THANK YOU!</h1>
+    <p class="thanks-text">Your message has been sent!</p>
+  </main>
+  <div class="additional">
+    <p class="thanks-text">Check out more of my work here</p>
+    <i><a href="https://github.com/Ebi27" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
+    <p class="thanks-text">Or connect with me on Social Media</p>
+    <div class="thanks-icons">
+     <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
+       <i><a href="https://mobile.twitter.com/lifewithebi" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></i>
+        <i><a href="https://github.com/Ebi27" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
+      <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
+    </div>
+  </div>
+     <!-- Links to my social media pages -->
+   <div class="connect">
+      <p>Connect with Me</p>
+      <hr>
+    </div>
+    <div class="social-media">
+      <i><a href="https://github.com/Ebi27?tab=repositories" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
+      <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
+      <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
+    </div>
+  </footer>
      <!--JavaScript File Link-->
     <script type="text/javascript" src="src/index.js"></script>
 </body>
