Added guess guame link

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
         </div>
         <img src="portf/guessing-game.png" alt="Guessing game"> 
         <div class="project-buttons hidden-buttons">
-          <button  class="live-button" type="button"><a class="live" target="_blank" href="#">View Live</a></button> <!--Add website link-->
+          <button  class="live-button" type="button"><a class="live" target="_blank" href="https://guess-game-ebi.netlify.app/">View Live</a></button> <!--Add website link-->
           <button class="code-button" type="button"><a target="_blank" href="https://github.com/Ebi27/Number-Guessing-Game ">View Code</a></button>
         </div>
       </div>
