renamed an image

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
         <span class="angle-back"><ion-icon name="chevron-back-outline"></ion-icon></span>
       </div>
       <div id="project-images">
-        <img src="portf/WeatherProject.docx" alt="Weather App">
+        <img src="portf/WeatherProject.png" alt="Weather App">
         <div class="project-buttons hidden-buttons">
           <button  class="live-button" type="button"><a class="live" target="_blank" href="https://weather-ebi-app.netlify.app/">View Live</a></button>
           <button class="code-button" type="button"><a target="_blank" href="https://github.com/Ebi27/Weather-app">View Code</a></button>
