--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,6 @@
     </div>
   </footer>
      <!--JavaScript File Link-->
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
