--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <div class="resume-details section1">
         <h3 class="resume-titles">Education</h3>
         <ul>
-          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Jagiellonian University</b> MScInternational Security And Development</li>
+          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Jagiellonian University </b> MSc International Security And Development</li>
           <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Afe Babalola University</b>BSc Intelligence And Security Studies</li>
         </ul>
       </div>
@@ -73,7 +73,6 @@
           <li class="resume-list"><ion-icon name="logo-html5"></ion-icon>HTML5</li>
           <li class="resume-list"><ion-icon name="logo-css3"></ion-icon>CSS3</li>
           <li class="resume-list"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
-          <li class="resume-list"><img src="https://img.icons8.com/ios-filled/50/000000/jquery.png"/>jQuery</li>
           <li class="resume-list"><ion-icon name="git-branch-outline"></ion-icon>Git</li>
         </ul>
       </div>
@@ -108,8 +107,7 @@
       <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
     </div>
   </footer>
-  
   <!--JavaScript File Link-->
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
