--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css"/>
     <title>Portfolio</title>
   </head>
 <body>
@@ -63,7 +63,7 @@
     </div>
     <div id="greeting-img">
       <div class="empty">
-        <img src="images/Ebi.jpeg" alt="photo of heather">
+        <img src="images/Ebi.jpeg" alt="Ebi's picture" height:300>
       </div>
     </div>
   </section>
@@ -71,7 +71,7 @@
 <section class="about-section">
     <div class="about">
       <h2>About Me</h2>
-      <p>I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding<a href="about.html">continue...</a></p>
+      <p>I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement and working my way towards being a full-stack developer. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding<a href="about.html"> continue...</a></p>
     </div>
    <!-- Links to my social media pages -->
    <div class="connect">
@@ -85,6 +85,6 @@
     </div>
   </footer>
      <!--JavaScript File Link-->
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
