--- a/thankyou.html
+++ b/thankyou.html
@@ -25,7 +25,7 @@
      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css"/>
     <title>Thank you</title>
   </head>
 <body>
@@ -79,6 +79,6 @@
     </div>
   </footer>
      <!--JavaScript File Link-->
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
