Minor corrections: Comments  and class names

--- a/thankyou.html
+++ b/thankyou.html
@@ -72,12 +72,11 @@
       <p>Connect with Me</p>
       <hr>
     </div>
-    <div class="social-media">
+    <div class="social-media d-flex justify-content-center mb-5">
       <i><a href="https://github.com/Ebi27?tab=repositories" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
       <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
       <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
     </div>
-  </footer>
      <!--JavaScript File Link-->
     <script type="text/javascript" src="src/app.js"></script>
 </body>
