--- a/about.html
+++ b/about.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!--Source Links -->
+   <!--Source Links bootstrap, font-awesome, ion-icon-->
+   <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap JS -->
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- Googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
-    <script
+    <!-- ion icons -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+   <!-- Font awesome -->
+<script
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
     ></script>
-     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="src/styles.css" />
     <title>About Me</title>
@@ -45,7 +51,7 @@
       </button>
     </nav>
   </header>
-   <!-- Connecting the Navbar links -->
+   <!-- Dropdown links -->
  <nav class="mobile-nav">
     <a href="index.html">home</a>
     <a href="about.html">about</a>
@@ -101,12 +107,11 @@
       <p>Connect with Me</p>
       <hr>
     </div>
-    <div class="social-media">
+    <div class="social-media d-flex justify-content-center mb-5">
       <i><a href="https://github.com/Ebi27?tab=repositories" target="_blank"><ion-icon name="logo-github"></ion-icon></a></i>
       <i><a href="https://www.linkedin.com/in/ebi-kpemi-ogokimi/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></i>
       <i><a href="mailto:kpemiogokimiebi@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></i>
     </div>
-  </footer>
   <!--JavaScript File Link-->
     <script type="text/javascript" src="src/app.js"></script>
 </body>
