Added active class to navbars

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <header>
     <nav id="navbar">
       <ul class="nav-list">
-        <li class="nav-links"><a href="index.html">home</a></li>
-        <li class="nav-links"><a href="about.html">about</a></li>
+        <li class="nav-links active"><a href="index.html">home</a></li>
+        <li class="nav-links active"><a href="about.html">about</a></li>
       </ul>
       <h2 id="logo">Ebi Kpemi-Ogokimi</h2>
       <ul class="nav-list">
-        <li class="nav-links"><a href="projects.html">projects</a></li>
-        <li class="nav-links"><a href="contact.html">contact</a></li>
+        <li class="nav-links active"><a href="projects.html">projects</a></li>
+        <li class="nav-links active"><a href="contact.html">contact</a></li>
       </ul>
       <button class="hamburger"type="button">
         <div class="bar"></div>
