--- a/projects.html
+++ b/projects.html
@@ -40,13 +40,13 @@
     <header>
     <nav id="navbar">
       <ul class="nav-list">
-        <li class="nav-links"><a href="index.html">home</a></li>
-        <li class="nav-links"><a href="about.html">about</a></li>
+        <li class="nav-links active"><a href="index.html">home</a></li>
+        <li class="nav-links active"><a href="about.html">about</a></li>
       </ul>
       <h2 id="logo">Ebi Kpemi-Ogokimi</h2>
       <ul class="nav-list">
-        <li class="nav-links"><a href="projects.html">projects</a></li>
-        <li class="nav-links"><a href="contact.html">contact</a></li>
+        <li class="nav-links active"><a href="projects.html">projects</a></li>
+        <li class="nav-links active"><a href="contact.html">contact</a></li>
       </ul>
       <button class="hamburger"type="button">
         <div class="bar"></div>
@@ -69,7 +69,7 @@
       <div id="project-images">
         <img src="portf/WeatherProject.png" alt="Weather App">
         <div class="project-buttons hidden-buttons">
-          <button  class="live-button" type="button"><a class="live" target="_blank" href="https://weather-ebi-app.netlify.app/">View Live</a></button>
+          <button  class="live-button" type="button "><a class="live" target="_blank" href="https://weather-ebi-app.netlify.app/">View Live</a></button>
           <button class="code-button" type="button"><a target="_blank" href="https://github.com/Ebi27/Weather-app">View Code</a></button>
         </div>
 <img src="portf/krakowLandingPage.png" alt="Krakow Landing Page">
@@ -82,7 +82,7 @@
           <button  class="live-button" type="button"><a class="live" target="_blank" href="https://museum-of-candy-by-ebi.netlify.app/">View Live</a></button>
           <button class="code-button" type="button"><a target="_blank" href="https://github.com/Ebi27/Museum_of_Candy">View Code</a></button>
         </div>
-        <img src="portf/guessing-game.png" alt="Guessing game"> 
+        <img src="portf/guesssing-game.png" alt="Guessing game"> 
         <div class="project-buttons hidden-buttons">
           <button  class="live-button" type="button"><a class="live" target="_blank" href="https://guess-game-ebi.netlify.app/">View Live</a></button> <!--Add website link-->
           <button class="code-button" type="button"><a target="_blank" href="https://github.com/Ebi27/Number-Guessing-Game ">View Code</a></button>
