--- a/about.html
+++ b/about.html
@@ -61,7 +61,11 @@
   <section class="about-section">
     <div class="about">
       <h2>About Me</h2>
-      <p> I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding, I enjoy listening to music and just letting myself soak in the message the artist is passing, and traveling. I enjoy working independently as this gives me an opportunity to depend on my own knowledge and practice my abilities to research and trust my decisions. I however also enjoy collaborating within teams as well, as this helps me brainstorm ideas, gain some knowledge i would have otherwise spent so much time trying to find out and also share my own ideas. I like to have a balance of both, and this is what i look for in a company. </p>
+      <p> My journey as a self-taught developer started during the last week of November, 2021 when i wrote my first "Hello World". I have intensely enjoyed learning from scratch, not just how to code but creative problem solving techniques. All of these and more have inspired me to take a step back,
+         and revamp my entire professional life. Doing this, i have taken a class on Agile Project management to fully understand the 
+        life-cycle of software developement and how important every step is, 
+        from concept to development and delivery. I have also taken a class to develop my soft skills and an effective team work process.
+        When i am not coding, I enjoy listening to music  and just letting myself soak in the message the artist is passing. I also enjoy traveling and getting lost in new cities. </p>
     </div>
 
     <!-- Adding infos from my CV -->
@@ -85,12 +89,13 @@
       <div class="resume-details section3">
         <h3 class="resume-titles">Dev Tools</h3>
         <ul>
+          <li class="resume-list icon"><img src="imgs/api-icon.png">API</li>
           <li class="resume-list"><ion-icon name="logo-github"></ion-icon>GitHub</li>
-          <li class="resume-list"><img src="images/VScode.png"/>VS Code</li>
+            <li class="resume-list icon"><img src="imgs/hosting.jpg">Hosting</li>
+          <li class="resume-list icon"><img src="imgs/vscode.png"/>VS Code</li>
           <li class="resume-list"><ion-icon name="logo-google"></ion-icon>Google Fonts</li>
           <li class="resume-list"><ion-icon name="logo-chrome"></ion-icon>Chrome Dev Tools</li>
-          <li class="resume-list"><img src="images/API.png">API</li>
-            <li class="resume-list"><img src="images/Hosting.png">Hosting</li>
+      
         </ul>
       </div>
     </div>
