--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
 <section class="about-section">
     <div class="about">
       <h2>About Me</h2>
-      <p>I am a software developer who enjoys creating and developing things and always looking forward to the next challenge. I have a background in Network monitoring and web developement and working my way towards being a full-stack developer. I understand the life-cycle of software developement and how important every step is, from concept to development and delivery. When i am not coding<a href="about.html"> continue...</a></p>
+      <p>My journey as a self-taught developer started during the last week of November, 2021 when i wrote my first "Hello World". I have intensely enjoyed learning from scratch, not just how to code but creative problem solving techniques. All of these and more have inspired me to take a step back,
+         and revamp my entire professional life. Doing this, i have taken a class on Agile Project management to fully understand the 
+        life-cycle of software developement and how important every step is, 
+        from concept to development and delivery. I have <a href="about.html"> continue...</a></p>
     </div>
    <!-- Links to my social media pages -->
    <div class="connect">
