Minor changes to form action

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
     </div>
   </section>
   <section class="contact-container">
-    <form  method="POST" action="https://formsubmit.co/kpemiogokimiebi@gmail.com" method="POST">
+    <form action="https://formsubmit.co/kpemiogokimiebi@gmail.com" method="POST">
       <div class="inputs">
         <input class="line" type="text" name="text" placeholder="Name" required>
         <input class="line email" type="email" name="email" placeholder="Example@gmail.com" required>
