--- a/projects.html
+++ b/projects.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
      <!--Source Links bootstrap, font-awesome, ion-icon-->
-   <!-- Bootstrap CSS -->
+   
+     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+   
     <!-- Bootstrap JS -->
-    <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <!-- Googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,10 +25,12 @@
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
+  
     <!-- ion icons -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-   <!-- Font awesome -->
+   
+<!-- Font awesome -->
 <script
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
@@ -34,6 +38,12 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="src/styles.css"/>
+
+    <!-- Meta Details for SEO -->
+    <meta name="Ebi Kpemi-Ogokimi"  content="Portfolio project page" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
     <title>Projects</title>
   </head>
 <body>
@@ -55,13 +65,13 @@
   </header>
  <!--Dropdown links -->
  <nav class="mobile-nav">
-    <a href="index.html">home</a>
-    <a href="about.html">about</a>
-    <a href="projects.html">projects</a>
-    <a href="contact.html">contact</a>
+    <a href="index.html" title="Ebi's homepage">home</a>
+    <a href="about.html" title="Ebi's aboutpage">about</a>
+    <a href="projects.html" title="Ebi's projectpage">projects</a>
+    <a href="contact.html" title="Ebi's contactpage">contact</a>
   </nav>
 <section class="projects">
-    <h1 class="project-title">Projects</h1>
+    <h1 class="project-title" title="project title">Projects</h1>
     <div class="project-container">
       <div class="back-button back">
         <span class="angle-back"><ion-icon name="chevron-back-outline"></ion-icon></span>
