--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Source Links bootstrap, font-awesome, ion-icon-->
-   <!-- Bootstrap CSS -->
+   
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,8 +15,8 @@
       crossorigin="anonymous"
     />
     <!-- Bootstrap JS -->
-    <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <!-- Googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,10 +24,12 @@
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
       rel="stylesheet"
     />
+    
     <!-- ion icons -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-   <!-- Font awesome -->
+  
+<!-- Font awesome -->
 <script
       src="https://kit.fontawesome.com/f45f5c3b85.js"
       crossorigin="anonymous"
@@ -34,6 +37,12 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="src/styles.css" />
+
+    <!-- Meta Details for SEO -->
+    <meta name="Ebi Kpemi-Ogokimi"  content="Portfolio contact page" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
     <title>Contact</title>
   </head>
 <body>
