Minor changes to page title

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
    
     <!-- Favicon -->
     <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
-    <title>About Me</title>
+    <title>Ebi Kpemi-Ogokimi</title>
   </head>
 <body>
     <header>
