--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
     <!-- Favicon -->
     <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
-    <title>Contact</title>
+    <title>Ebi Kpemi-Ogokimi</title>
   </head>
 <body>
     <header>
