--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 
     <!-- Favicon -->
     <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
-    <title>Projects</title>
+    <title>Ebi Kpemi-Ogokimi</title>
   </head>
 <body>
     <header>
