--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <!-- Favicon -->
     <link rel="icon" href="https://ebi-kpemi-ogokimi.netlify.app//favicon.png">
-    <title>Portfolio</title>
+    <title>Ebi Kpemi-Ogokimi</title>
   </head>
 <body>
   
@@ -83,7 +83,7 @@
     </div>
     <div id="greeting-img">
       <div class="empty">
-        <img src="images/Ebi.jpeg" alt="Ebi's picture" height:300>
+        <img src="images/Ebi (2).jpeg" alt="Ebi's picture" height:300>
       </div>
     </div>
   </section>
