Update about me section

--- a/about.html
+++ b/about.html
@@ -76,11 +76,13 @@
   <section class="about-section" title="About section">
     <div class="about">
       <h2>About Me</h2>
-      <p> My journey as a self-taught developer started during the last week of November, 2021 when i wrote my first "Hello World". I have intensely enjoyed learning from scratch, not just how to code but creative problem solving techniques. All of these and more have inspired me to take a step back,
-         and revamp my entire professional life. Doing this, i have taken a class on Agile Project management to fully understand the 
-        life-cycle of software developement and how important every step is, 
-        from concept to development and delivery. I have also taken a class to develop my soft skills and an effective team work process.
-        When i am not coding, I enjoy listening to music  and just letting myself soak in the message the artist is passing. I also enjoy traveling and getting lost in new cities. </p>
+      <p> My name is Ebi and my major focus interest is in backend development - Designing and building highly scalable architectiures, disctributed systems and big data. 
+        Through the months, I have focused on building my knowledge around foundational logic and it's application, Object oriented programming, designing relational database, understanding software design principles, memory management, software modularity and networking as it relates to backend development. 
+      I do not underestimate the power of self awareness and this has guided me towards the path of continous learning in order to fill in my knowldge gap. 
+      </br>
+
+    I am currently voluteering as an open source contributor working on a cloud native computing project where I am learning cloud native infrastructure management techniques, increasing my understanding of distributed systems challenges and how to properly implement best-practice patterns of modern software design.
+  I am also currently at the end of my java full-stack training at generation USA where I am not only gaining new technical skills, but also soft skills like time management, effective communication, staying updated with technological trends and more. I enjoy reading books on software design patterns, clean code and self improvements during my free time. </p>
     </div>
 
     <!-- Adding infos from my CV -->
@@ -88,23 +90,30 @@
       <div class="resume-details section1">
         <h3 class="resume-titles">Education</h3>
         <ul>
-          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Jagiellonian University </b> MSc International Security And Development</li>
-          <li class="resume-list"><ion-icon name="school-outline"></ion-icon><b>Afe Babalola University</b>BSc Intelligence And Security Studies</li>
+            <li class="resume-list"><ion-icon name="school-outline"></ion-icon> Generation USA </br>Junior Full-Stack Java Developer</li>
+          <li class="resume-list"><ion-icon name="school-outline"></ion-icon>   Jagiellonian University </br> MSc International Security And Development</li>
+          <li class="resume-list"><ion-icon name="school-outline"></ion-icon>   Afe Babalola University</br>BSc Intelligence And Security Studies</li>
         </ul>
       </div>
       <div class="resume-details section2">
         <h3 class="resume-titles">Skills</h3>
         <ul>
-          <li class="resume-list"><ion-icon name="logo-html5"></ion-icon>HTML5</li>
-          <li class="resume-list"><ion-icon name="logo-css3"></ion-icon>CSS3</li>
-          <li class="resume-list"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
-          <li class="resume-list"><ion-icon name="git-branch-outline"></ion-icon>Git</li>
+          <li class="resume-list"><img src="imgs/sql-server.png"></ion-icon> SQL</li>
+           <li class="resume-list"><ion-icon name="git-branch-outline"></ion-icon> Git</li>
+             <li class="resume-list icon"><img src="imgs/api-icon.png"> API</li>
+          <li class="resume-list"><img src="imgs/java.png"></ion-icon> Java</li>
+          <li class="resume-list"><ion-icon name="logo-html5"></ion-icon> HTML5</li>
+          <li class="resume-list"><ion-icon name="logo-css3"></ion-icon> CSS3</li>
+          <li class="resume-list"><img src="imgs/nodejs.png"></ion-icon> Node.js</li>
+          <li class="resume-list"><ion-icon name="logo-javascript"></ion-icon> JavaScript</li>
+          <li class="resume-list"><img src="imgs/mochajs-icon.svg"></ion-icon> Mocha</li>
+          <li class="resume-list"><img src="imgs/spring-boot.svg"></ion-icon></ion-icon> Springboot</li>
+          <li class="resume-list"><img src="imgs/aws.png"></ion-icon> AWS cloud</li>
         </ul>
       </div>
       <div class="resume-details section3">
         <h3 class="resume-titles">Dev Tools</h3>
         <ul>
-          <li class="resume-list icon"><img src="imgs/api-icon.png">API</li>
           <li class="resume-list"><ion-icon name="logo-github"></ion-icon>GitHub</li>
             <li class="resume-list icon"><img src="imgs/hosting.jpg">Hosting</li>
           <li class="resume-list icon"><img src="imgs/vscode.png"/>VS Code</li>
