--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 <section class="about-section" title="About Ebi">
     <div class="about">
       <h2>About Me</h2>
-      <p>My journey as a self-taught developer started during the last week of November, 2021 when i wrote my first "Hello World". I have intensely enjoyed learning from scratch, not just how to code but creative problem solving techniques. All of these and more have inspired me to take a step back,
-         and revamp my entire professional life. Doing this, i have taken a class on Agile Project management to fully understand the 
-        life-cycle of software developement and how important every step is, 
-        from concept to development and delivery. I have <a href="about.html"> continue...</a></p>
+      <p>My name is Ebi and my major focus interest is in backend development - Designing and building highly scalable architectiures, disctributed systems and big data. 
+        Through the months, I have focused on building my knowledge around foundational logic and it's application, Object oriented programming, designing relational database, understanding software design principles, memory management, software modularity and networking as it relates to backend development. 
+      I do not underestimate the power of self awareness and this has guided me towards the path of continous learning in order to fill in my knowldge gap. 
+    I am currently voluteering as an open source contributor at <a href="about.html"> continue...</a></p>
     </div>
    <!-- Links to my social media pages -->
    <div class="connect">
